# grosbeak-2023-public

./: .editorconfig  .env  .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt  start.sh  start_dev.sh  test_picklist.html
.github/workflows/: code.yml  lint.yml  release.yml  type-check.yml
grosbeak/: auth.py  db.py  env.py  main.py  util.py
grosbeak/routers/: admin.py  api.py  images.py  live.py  notes.py
grosbeak/routers/picklist/: __init__.py  live.py  rest.py
match-schedules/: 2022caph.json
scripts/: manually_redeploy.py  start_dev.sh
src/: auth.py  db.py  env.py  server.py  util.py
src/routers/: admin.py  api.py  images.py  live.py
static/team-lists/: 2022caph.json
tests/: test_util.py
web/: index.html  script.js
web/schemas/: match-schedule.json  team-list.json
