[tool.poetry]
authors = ["Calvin Laurenson <89622328+calvin-laurenson@users.noreply.github.com>"]
description = ""
name = "grosbeak"
version = "0"

[tool.poetry.dependencies]
fastapi = "~0.75"
loguru = "~0.6"
pydantic = "~1.9"
pymongo = {git = "https://github.com/mongodb/mongo-python-driver.git", tag = "4.2.0", extras = ["srv"]}
python = "^3.8"
python-multipart = "~0.0.5"
uvicorn = {version = "~0.17", extras = ["standard"]}

[tool.poetry.group.dev.dependencies]
black = "~22.3"
mypy = "~0.942"
pytest = "~7.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]

[tool.poetry-dynamic-versioning]
enable = true
pattern = "^(?P<base>\\d+(\\.\\d+)*)"
style = "semver"
vcs = "git"

[tool.black]
src = "grosbeak/"
include = '\.py$'

[tool.mypy]
files = "./grosbeak/**/*.py"
namespace_packages = true
explicit_package_bases = true

[tool.mypy-pymongo]
ignore_missing_imports = true