[tool.poetry]
authors = ["Calvin Laurenson <89622328+calvin-laurenson@users.noreply.github.com>"]
description = ""
name = "grosbeak"
version = "0"

[tool.poetry.dependencies]
# Temporary until https://github.com/tiangolo/fastapi/pull/9315 is merged
fastapi = {git="https://github.com/sharonyogev/fastapi", branch="fix/deepcoy_fieldinfo_of_annotated_args"}
loguru = "~0.6"
pydantic = "~1.10"
pymongo = { git = "https://github.com/mongodb/mongo-python-driver.git", tag = "4.2.0", extras = ["srv"] }
python = "^3.11"
python-multipart = "~0.0.5"
uvicorn = { version = "~0.17", extras = ["standard"] }

[tool.poetry.group.dev.dependencies]
black = "~22.3"
mypy = "~0.942"
pytest = "~7.1"
ruff = "^0.0.257"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]

[tool.poetry-dynamic-versioning]
enable = true
pattern = "^(?P<base>\\d+(\\.\\d+)*)"
style = "semver"
vcs = "git"

[tool.black]
src = "grosbeak/"
include = '\.py$'
target-version = ["py310"]
line-length = 88

[tool.mypy]
files = "./grosbeak/**/*.py"
namespace_packages = true
explicit_package_bases = true

[tool.mypy-pymongo]
ignore_missing_imports = true

[tool.ruff]
line-length = 120
src = ["grosbeak"]
